export const snapshot = {};

snapshot[`nu / linux / find (redirect) 1`] = `
\`zsh --no-rcs -c r#'REQ_URL_SH='http://x/sh/zsh/script/find?sysOsPlat=linux'

eval "\$( curl --fail-with-body --location --no-progress-meter --url "\${REQ_URL_SH}" )"

'#\`
`;

snapshot[`nu / winnt / find (redirect) 1`] = `
\`pwsh -noprofile -c r#'\$REQ_URL_SH = 'http://x/sh/pwsh/script/find?sysOsPlat=winnt'

iex "\$( irm -ErrorAction Stop -ProgressAction SilentlyContinue -Uri "\${REQ_URL_SH}" )"

'#\`
`;

snapshot[`pwsh / winnt / find 1`] = `
\`\$REQ_URL_CFG = 'http://x/cfg'

\$REQ_URL_SH = 'http://x/sh/pwsh/script/find?sysOsPlat=winnt'

function opPrint {
  if (\$SUCCINCT) {
    return
  }
  [Console]::WriteLine(\$(\$args -join ' '))
}

function opPrintErr {
  if (\$SUCCINCT) {
    return
  }
  if (\$GRAYSCALE) {
    [Console]::Error.WriteLine(\$(\$args -join ' '))
    return
  }
  [Console]::ForegroundColor = 'red'
  [Console]::Error.WriteLine(\$(\$args -join ' '))
  [Console]::ResetColor()
}

function opPrintSucc {
  if (\$SUCCINCT) {
    return
  }
  if (\$GRAYSCALE) {
    [Console]::WriteLine(\$(\$args -join ' '))
    return
  }
  [Console]::ForegroundColor = 'green'
  [Console]::WriteLine(\$(\$args -join ' '))
  [Console]::ResetColor()
}

function opPrintWarn {
  if (\$SUCCINCT) {
    return
  }
  if (\$GRAYSCALE) {
    [Console]::WriteLine(\$(\$args -join ' '))
    return
  }
  [Console]::ForegroundColor = 'yellow'
  [Console]::WriteLine(\$(\$args -join ' '))
  [Console]::ResetColor()
}

function opPrintInfo {
  if (\$SUCCINCT) {
    return
  }
  if (\$GRAYSCALE) {
    [Console]::WriteLine(\$(\$args -join ' '))
    return
  }
  [Console]::ForegroundColor = 'blue'
  [Console]::WriteLine(\$(\$args -join ' '))
  [Console]::ResetColor()
}

function opPrintCmd {
  if (\$SUCCINCT) {
    return
  }
  if (\$GRAYSCALE) {
    [Console]::WriteLine(\$(\$args -join ' '))
    return
  }
  [Console]::ForegroundColor = 'magenta'
  [Console]::Write(\$args[0])
  [Console]::ResetColor()
  if (\$args.Length -gt 1) {
    [Console]::Write(' ')
    [Console]::ForegroundColor = 'cyan'
    [Console]::WriteLine(\$(\$(\$args | Select-Object -Skip 1) -join ' '))
    [Console]::ResetColor()
  }
}

function opRunCmd {
  iex "\$(\$args -join ' ')"
}

function opPrintRunCmd {
  opPrintCmd @args
  opRunCmd @args
}

function opPrintMaybeRunCmd {
  opPrintCmd @args
  if (-not \$NOOP) {
    opRunCmd @args
  }
}


\$SH_VERS_MAJOR = 7

\$SH_VERS_MINOR = 5

& {
  \$major = \$SH_VERS_MAJOR -as [int]
  \$minor = \$SH_VERS_MINOR -as [int]

  if (\$PSVersionTable.PSVersion.Major -lt \$major -or \$PSVersionTable.PSVersion.Minor -lt \$minor) {
    opPrintErr "pwsh must be >= '\${major}.\${minor}' .. found '\$(\$PSVersionTable.PSVersion)' .. aborting"
    exit 1
  }
}


\$REQ_ORIG = 'http://x'

\$SYS_OS_PLAT = 'winnt'

\$REQ_PATH = '/sh/pwsh/script/find'

\$REQ_SRCH = '?sysOsPlat=winnt'

& {
  \$yn = ''
  if (\$YES) {
    \$yn = 'y'
  } else {
    \$yn = Read-Host "? use script [y, [n]]"
  }
  if (\$yn -ne 'n') {
opPrint 'install'
opPrint '  llama'
opPrint 'repair'
opPrint '  gpu'
opPrint 'setup'
opPrint '  clock, fs, rust, ssh-server, webdav, windows-terminal, wsl'
  }
}
\`
`;

snapshot[`zsh / darwin / find 1`] = `
\`REQ_URL_CFG='http://x/cfg'

REQ_URL_SH='http://x/sh/zsh/script/find?sysOsPlat=darwin'

function opPrint {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  print -r -- "\$*"
}

function opPrintErr {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*" >&2
    return
  fi
  print -n "\\\\033[0;31m" >&2
  print -n -r -- "\$*" >&2
  print "\\\\033[0m" >&2
}

function opPrintSucc {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;32m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintWarn {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;33m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintInfo {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;34m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintCmd {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;35m"
  print -n -r "\$1"
  print -n "\\\\033[0m"
  shift 1
  if [[ \$* ]]; then
    print -n " \\\\033[0;36m"
    print -n -r -- "\$*"
    print "\\\\033[0m"
  fi
}

function opRunCmd {
  eval "\$*"
}

function opPrintRunCmd {
  opPrintCmd "\$@"
  opRunCmd "\$@"
}

function opPrintMaybeRunCmd {
  opPrintCmd "\$@"
  if [[ -z \$NOOP ]]; then
    opRunCmd "\$@"
  fi
}


SH_VERS_MAJOR=5

SH_VERS_MINOR=9

function () {
  local major=\$SH_VERS_MAJOR
  local minor=\$SH_VERS_MINOR

  autoload is-at-least
  if ! is-at-least "\${major}.\${minor}"; then
    opPrintErr "zsh must be >= '\${major}.\${minor}' .. found '\${ZSH_VERSION}' .. aborting"
    exit 1
  fi
}


REQ_ORIG='http://x'

SYS_OS_PLAT='darwin'

REQ_PATH='/sh/zsh/script/find'

REQ_SRCH='?sysOsPlat=darwin'

function () {
  local yn=''
  if [[ \$YES ]]; then
    yn='y'
  else
    read "yn?? use script [y, [n]]: "
  fi
  if [[ \$yn != 'n' ]]; then
opPrint 'install'
opPrint '  font-nerd'
opPrint 'repair'
opPrint '  brew, copyq'
opPrint 'setup'
opPrint '  iterm, rust'
  fi
}
\`
`;

snapshot[`zsh / linux / find 1`] = `
\`REQ_URL_CFG='http://x/cfg'

REQ_URL_SH='http://x/sh/zsh/script/find?sysOsPlat=linux'

function opPrint {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  print -r -- "\$*"
}

function opPrintErr {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*" >&2
    return
  fi
  print -n "\\\\033[0;31m" >&2
  print -n -r -- "\$*" >&2
  print "\\\\033[0m" >&2
}

function opPrintSucc {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;32m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintWarn {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;33m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintInfo {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;34m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintCmd {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;35m"
  print -n -r "\$1"
  print -n "\\\\033[0m"
  shift 1
  if [[ \$* ]]; then
    print -n " \\\\033[0;36m"
    print -n -r -- "\$*"
    print "\\\\033[0m"
  fi
}

function opRunCmd {
  eval "\$*"
}

function opPrintRunCmd {
  opPrintCmd "\$@"
  opRunCmd "\$@"
}

function opPrintMaybeRunCmd {
  opPrintCmd "\$@"
  if [[ -z \$NOOP ]]; then
    opRunCmd "\$@"
  fi
}


SH_VERS_MAJOR=5

SH_VERS_MINOR=9

function () {
  local major=\$SH_VERS_MAJOR
  local minor=\$SH_VERS_MINOR

  autoload is-at-least
  if ! is-at-least "\${major}.\${minor}"; then
    opPrintErr "zsh must be >= '\${major}.\${minor}' .. found '\${ZSH_VERSION}' .. aborting"
    exit 1
  fi
}


REQ_ORIG='http://x'

SYS_OS_PLAT='linux'

REQ_PATH='/sh/zsh/script/find'

REQ_SRCH='?sysOsPlat=linux'

function () {
  local yn=''
  if [[ \$YES ]]; then
    yn='y'
  else
    read "yn?? use script [y, [n]]: "
  fi
  if [[ \$yn != 'n' ]]; then
opPrint 'install'
opPrint '  font-nerd'
opPrint 'setup'
opPrint '  docker, lxc, podman, rust'
  fi
}
\`
`;

snapshot[`zsh / linux / find (install filter) 1`] = `
\`REQ_URL_CFG='http://x/cfg'

REQ_URL_SH='http://x/sh/zsh/script/find/install?sysOsPlat=linux'

function opPrint {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  print -r -- "\$*"
}

function opPrintErr {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*" >&2
    return
  fi
  print -n "\\\\033[0;31m" >&2
  print -n -r -- "\$*" >&2
  print "\\\\033[0m" >&2
}

function opPrintSucc {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;32m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintWarn {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;33m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintInfo {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;34m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintCmd {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;35m"
  print -n -r "\$1"
  print -n "\\\\033[0m"
  shift 1
  if [[ \$* ]]; then
    print -n " \\\\033[0;36m"
    print -n -r -- "\$*"
    print "\\\\033[0m"
  fi
}

function opRunCmd {
  eval "\$*"
}

function opPrintRunCmd {
  opPrintCmd "\$@"
  opRunCmd "\$@"
}

function opPrintMaybeRunCmd {
  opPrintCmd "\$@"
  if [[ -z \$NOOP ]]; then
    opRunCmd "\$@"
  fi
}


SH_VERS_MAJOR=5

SH_VERS_MINOR=9

function () {
  local major=\$SH_VERS_MAJOR
  local minor=\$SH_VERS_MINOR

  autoload is-at-least
  if ! is-at-least "\${major}.\${minor}"; then
    opPrintErr "zsh must be >= '\${major}.\${minor}' .. found '\${ZSH_VERSION}' .. aborting"
    exit 1
  fi
}


REQ_ORIG='http://x'

SYS_OS_PLAT='linux'

REQ_PATH='/sh/zsh/script/find/install'

REQ_SRCH='?sysOsPlat=linux'

SCRIPT_FIND_PARTS='install'

function () {
  local yn=''
  if [[ \$YES ]]; then
    yn='y'
  else
    read "yn?? use script [y, [n]]: "
  fi
  if [[ \$yn != 'n' ]]; then
opPrint 'install'
opPrint '  font-nerd'
  fi
}
\`
`;

snapshot[`nu / linux / exec (redirect) 1`] = `
\`zsh --no-rcs -c r#'REQ_URL_SH='http://x/sh/zsh/script/exec/install?sysOsPlat=linux'

eval "\$( curl --fail-with-body --location --no-progress-meter --url "\${REQ_URL_SH}" )"

'#\`
`;

snapshot[`nu / winnt / exec (redirect) 1`] = `
\`pwsh -noprofile -c r#'\$REQ_URL_SH = 'http://x/sh/pwsh/script/exec/install?sysOsPlat=winnt'

iex "\$( irm -ErrorAction Stop -ProgressAction SilentlyContinue -Uri "\${REQ_URL_SH}" )"

'#\`
`;

snapshot[`pwsh / winnt / exec 1`] = `
\`\$REQ_URL_CFG = 'http://x/cfg'

\$REQ_URL_SH = 'http://x/sh/pwsh/script/exec/install?sysOsPlat=winnt'

function opPrint {
  if (\$SUCCINCT) {
    return
  }
  [Console]::WriteLine(\$(\$args -join ' '))
}

function opPrintErr {
  if (\$SUCCINCT) {
    return
  }
  if (\$GRAYSCALE) {
    [Console]::Error.WriteLine(\$(\$args -join ' '))
    return
  }
  [Console]::ForegroundColor = 'red'
  [Console]::Error.WriteLine(\$(\$args -join ' '))
  [Console]::ResetColor()
}

function opPrintSucc {
  if (\$SUCCINCT) {
    return
  }
  if (\$GRAYSCALE) {
    [Console]::WriteLine(\$(\$args -join ' '))
    return
  }
  [Console]::ForegroundColor = 'green'
  [Console]::WriteLine(\$(\$args -join ' '))
  [Console]::ResetColor()
}

function opPrintWarn {
  if (\$SUCCINCT) {
    return
  }
  if (\$GRAYSCALE) {
    [Console]::WriteLine(\$(\$args -join ' '))
    return
  }
  [Console]::ForegroundColor = 'yellow'
  [Console]::WriteLine(\$(\$args -join ' '))
  [Console]::ResetColor()
}

function opPrintInfo {
  if (\$SUCCINCT) {
    return
  }
  if (\$GRAYSCALE) {
    [Console]::WriteLine(\$(\$args -join ' '))
    return
  }
  [Console]::ForegroundColor = 'blue'
  [Console]::WriteLine(\$(\$args -join ' '))
  [Console]::ResetColor()
}

function opPrintCmd {
  if (\$SUCCINCT) {
    return
  }
  if (\$GRAYSCALE) {
    [Console]::WriteLine(\$(\$args -join ' '))
    return
  }
  [Console]::ForegroundColor = 'magenta'
  [Console]::Write(\$args[0])
  [Console]::ResetColor()
  if (\$args.Length -gt 1) {
    [Console]::Write(' ')
    [Console]::ForegroundColor = 'cyan'
    [Console]::WriteLine(\$(\$(\$args | Select-Object -Skip 1) -join ' '))
    [Console]::ResetColor()
  }
}

function opRunCmd {
  iex "\$(\$args -join ' ')"
}

function opPrintRunCmd {
  opPrintCmd @args
  opRunCmd @args
}

function opPrintMaybeRunCmd {
  opPrintCmd @args
  if (-not \$NOOP) {
    opRunCmd @args
  }
}


\$SH_VERS_MAJOR = 7

\$SH_VERS_MINOR = 5

& {
  \$major = \$SH_VERS_MAJOR -as [int]
  \$minor = \$SH_VERS_MINOR -as [int]

  if (\$PSVersionTable.PSVersion.Major -lt \$major -or \$PSVersionTable.PSVersion.Minor -lt \$minor) {
    opPrintErr "pwsh must be >= '\${major}.\${minor}' .. found '\$(\$PSVersionTable.PSVersion)' .. aborting"
    exit 1
  }
}


\$REQ_ORIG = 'http://x'

\$SYS_OS_PLAT = 'winnt'

\$REQ_PATH = '/sh/pwsh/script/exec/install'

\$REQ_SRCH = '?sysOsPlat=winnt'

\$SCRIPT_EXEC_PARTS = 'install'

& {
  if (-not \$IsWindows) {
    opPrintWarn 'script is for winnt'
    return
  }
  function expand_release_assets ([string]\$url, [string[]]\$patterns) {
    \$res = (opPrintMaybeRunCmd irm -ErrorAction Stop -Uri "\${url}")
    if (-not \$NOOP) {
      \$task = 'llama-swap'
      \$taskWasRunning = \$false
      \$taskObj = Get-ScheduledTask -TaskName \$task -ErrorAction SilentlyContinue
      if (\$taskObj -and (\$taskObj.State -eq 'running')) {
        \$taskWasRunning = \$true
        opPrintMaybeRunCmd Stop-ScheduledTask -TaskName \$task
        opPrintMaybeRunCmd Start-Sleep -Seconds 2
      }
      \$url_assets = @()
      foreach (\$pattern in \$patterns) {
        \$url_assets += \$res.assets
        | Where-Object { \$_.browser_download_url -like \$pattern }
        | Select-Object -ExpandProperty browser_download_url
      }
      foreach (\$url_asset in \$url_assets) {
        \$outputFilePath = "\${HOME}\\\\\$(\$url_asset.Split('/')[-1])"
        opPrintRunCmd iwr -ErrorAction Stop -ProgressAction SilentlyContinue -OutFile "\${outputFilePath}" -Uri "\${url_asset}"
        opPrintRunCmd Expand-Archive -Force -Path "\${outputFilePath}" -DestinationPath "\${env:HOME}\\\\.local\\\\bin"
        opPrintRunCmd Remove-Item -Path "\${outputFilePath}"
      }
      if (\$taskWasRunning) {
        opPrintMaybeRunCmd Start-ScheduledTask -TaskName \$task
        opPrintMaybeRunCmd Start-Sleep -Seconds 2
      }
    }
  }
  \$yn = ''
  if (\$YES) {
    \$yn = 'y'
  } else {
    \$yn = Read-Host '? install llama - llama-swap (user) [y, [n]]'
  }
  if (\$yn -ne 'n') {
    \$arch = if (\$SYS_CPU_ARCH -eq 'x86_64') {
      'amd64'
    } elseif (\$SYS_CPU_ARCH -eq 'aarch64') {
      'arm64'
    } else {
      \$SYS_CPU_ARCH
    }
    \$url = 'https://api.github.com/repos/mostlygeek/llama-swap/releases/latest'
    \$patterns = @(
      , "*windows*\${arch}.zip"
    )
    expand_release_assets \$url \$patterns
  }
  if (\$YES) {
    \$yn = 'y'
  } else {
    \$yn = Read-Host '? install llama - llama.cpp (user) [y, [n]]'
  }
  if (\$yn -ne 'n') {
    \$arch = if (\$SYS_CPU_ARCH -eq 'x86_64') {
      'x64'
    } elseif (\$SYS_CPU_ARCH -eq 'aarch64') {
      'arm64'
    } else {
      \$SYS_CPU_ARCH
    }
    \$url = 'https://api.github.com/repos/ggml-org/llama.cpp/releases/latest'
    \$patterns = @(
      , "*win-cuda*\${arch}.zip"
      # , "*win-vulkan*\${llama_cpp_arch}.zip"
    )
    expand_release_assets \$url \$patterns
  }
}

\`
`;

snapshot[`zsh / darwin / exec 1`] = `
\`REQ_URL_CFG='http://x/cfg'

REQ_URL_SH='http://x/sh/zsh/script/exec/setup/docker?sysOsPlat=darwin'

function opPrint {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  print -r -- "\$*"
}

function opPrintErr {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*" >&2
    return
  fi
  print -n "\\\\033[0;31m" >&2
  print -n -r -- "\$*" >&2
  print "\\\\033[0m" >&2
}

function opPrintSucc {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;32m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintWarn {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;33m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintInfo {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;34m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintCmd {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;35m"
  print -n -r "\$1"
  print -n "\\\\033[0m"
  shift 1
  if [[ \$* ]]; then
    print -n " \\\\033[0;36m"
    print -n -r -- "\$*"
    print "\\\\033[0m"
  fi
}

function opRunCmd {
  eval "\$*"
}

function opPrintRunCmd {
  opPrintCmd "\$@"
  opRunCmd "\$@"
}

function opPrintMaybeRunCmd {
  opPrintCmd "\$@"
  if [[ -z \$NOOP ]]; then
    opRunCmd "\$@"
  fi
}


SH_VERS_MAJOR=5

SH_VERS_MINOR=9

function () {
  local major=\$SH_VERS_MAJOR
  local minor=\$SH_VERS_MINOR

  autoload is-at-least
  if ! is-at-least "\${major}.\${minor}"; then
    opPrintErr "zsh must be >= '\${major}.\${minor}' .. found '\${ZSH_VERSION}' .. aborting"
    exit 1
  fi
}


REQ_ORIG='http://x'

SYS_OS_PLAT='darwin'

REQ_PATH='/sh/zsh/script/exec/setup/docker'

REQ_SRCH='?sysOsPlat=darwin'

SCRIPT_EXEC_PARTS='setup|docker'

\`
`;

snapshot[`zsh / linux / exec 1`] = `
\`REQ_URL_CFG='http://x/cfg'

REQ_URL_SH='http://x/sh/zsh/script/exec/setup/docker?sysOsPlat=linux'

function opPrint {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  print -r -- "\$*"
}

function opPrintErr {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*" >&2
    return
  fi
  print -n "\\\\033[0;31m" >&2
  print -n -r -- "\$*" >&2
  print "\\\\033[0m" >&2
}

function opPrintSucc {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;32m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintWarn {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;33m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintInfo {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;34m"
  print -n -r -- "\$*"
  print "\\\\033[0m"
}

function opPrintCmd {
  if [[ \$SUCCINCT ]]; then
    return
  fi
  if [[ \$GRAYSCALE ]]; then
    print -r -- "\$*"
    return
  fi
  print -n "\\\\033[0;35m"
  print -n -r "\$1"
  print -n "\\\\033[0m"
  shift 1
  if [[ \$* ]]; then
    print -n " \\\\033[0;36m"
    print -n -r -- "\$*"
    print "\\\\033[0m"
  fi
}

function opRunCmd {
  eval "\$*"
}

function opPrintRunCmd {
  opPrintCmd "\$@"
  opRunCmd "\$@"
}

function opPrintMaybeRunCmd {
  opPrintCmd "\$@"
  if [[ -z \$NOOP ]]; then
    opRunCmd "\$@"
  fi
}


SH_VERS_MAJOR=5

SH_VERS_MINOR=9

function () {
  local major=\$SH_VERS_MAJOR
  local minor=\$SH_VERS_MINOR

  autoload is-at-least
  if ! is-at-least "\${major}.\${minor}"; then
    opPrintErr "zsh must be >= '\${major}.\${minor}' .. found '\${ZSH_VERSION}' .. aborting"
    exit 1
  fi
}


REQ_ORIG='http://x'

SYS_OS_PLAT='linux'

REQ_PATH='/sh/zsh/script/exec/setup/docker'

REQ_SRCH='?sysOsPlat=linux'

SCRIPT_EXEC_PARTS='setup|docker'

function () {
  if [[ \$SYS_OS_PLAT != 'linux' ]]; then
    opPrintWarn 'script is for linux'
    return
  fi
  if ! type docker > /dev/null; then
    opPrintWarn 'docker is not installed'
    return
  fi
  local yn=''
  if [[ \$YES ]]; then
    yn='y'
  else
    read 'yn?? setup docker - enable service [y, [n]]: '
  fi
  if [[ \$yn == 'n' ]]; then
    return
  fi
  opPrintMaybeRunCmd sudo systemctl enable --now docker
}

\`
`;
